--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>CuentasPorCobrar.Persistence.Euren</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Euren Cuevas, Nestor Moscat</Authors>
+    <Company>Euren Cuevas, Nestor Moscat</Company>
+    <Product>Accounting System</Product>
+    <Description>This is the persistence of the accounting project I'm doing. </Description>
+    <RepositoryUrl>https://github.com/Lunext/CuentasPorCobrar</RepositoryUrl>
    
   </PropertyGroup>
 
