Uploading first crud

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,10 @@
 {
+
+  "ConnectionStrings": {
+    "MyWebApiConnection": "Host=localhost;Port=5432;Database=cuentasporcobrardb;Username=postgres;Password=Euren002"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
