--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CuentasPorCobrar.BusinessLogic.Euren" Version="1.0.0" />
+    <PackageReference Include="CuentasPorCobrar.Persistence.Euren" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
