--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>CuentasPorCobrar.Persistence.Euren</PackageId>
-    <Version>1.1.1</Version>
+    <Version>1.1.2</Version>
     <Authors>Euren Cuevas, Nestor Moscat</Authors>
     <Company>Euren Cuevas, Nestor Moscat</Company>
     <Product>Accounting System</Product>
@@ -16,6 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+   
+    <PackageReference Include="CuentasPorCobrar.BusinessLogic.Euren" Version="1.1.5" />
    
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
       <PrivateAssets>all</PrivateAssets>
