--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -5,13 +5,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>CuentasPorCobrar.BusinessLogic.Euren</PackageId>
-    <Version>1.1.9</Version>
+    <Version>2.0.0</Version>
     <Authors>Euren Cuevas, Nestor Moscat</Authors>
     <Company>Euren Cuevas, Nestor Moscat</Company>
     <Product>CuentasPorCobrar.BusinessLogic</Product>
     <Description>Project to have the business logic of an accountant project</Description>
     <RepositoryUrl>https://github.com/Lunext/CuentasPorCobrar</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.1" />
+  </ItemGroup>
 
 
 
