--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,10 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CuentasPorCobrar.BusinessLogic.Euren" Version="2.0.0" />
-    <PackageReference Include="CuentasPorCobrar.Persistence.Euren" Version="2.0.0" />
+   
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Persistence\Persistence.csproj"/>
+		<ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj"/>
+		<ProjectReference Include="..\Domain\Domain.csproj"/>
+	</ItemGroup>
 
 </Project>
