--- a/API/API.csproj
+++ b/API/API.csproj
@@ -9,12 +9,14 @@
   <ItemGroup>
    
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+   
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\Persistence\Persistence.csproj"/>
-		<ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj"/>
-		<ProjectReference Include="..\Domain\Domain.csproj"/>
+		<ProjectReference Include="..\Persistence\Persistence.csproj" />
+		<ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
+		<ProjectReference Include="..\Domain\Domain.csproj" />
 	</ItemGroup>
 
 </Project>
