--- a/API/API.csproj
+++ b/API/API.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
    
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.14" />
+   
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 	<ItemGroup>
